--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,6 +3,7 @@
 
     <string name="app_name">SMS Manipulator</string>
     <string name="action_settings">Settings</string>
+    <string name="action_add_target">Add Target</string>
     <string name="quit_app">Quit</string>
 
     <string name="main_title">SMS Manipulator</string>
