--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,8 +5,11 @@
     <string name="action_settings">Settings</string>
     <string name="action_add_target">Add Target</string>
     <string name="quit_app">Quit</string>
+    <string name="open_drawer">Navigation Drawer Opened</string>
+    <string name="close_drawer">Navigation Drawer Closed</string>
 
     <string name="main_title">SMS Manipulator</string>
+    <string name="home_title">Home</string>
 
 
 </resources>
