--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
+    <string name="main_screen">Main Screen</string>
     <string name="app_name">SMS Manipulator</string>
     <string name="action_settings">Settings</string>
     <string name="action_add_target">Add Target</string>
